@@ -25,6 +25,8 @@ version 2.5.3 (??/??/????):
 	  the album, if possible. 
 	* Fix use of av_len in perl bindings to fix some off-by-one bugs (Paul
 	  Aurich)
+	* On ICQ, advertise the ICQ 6 typing capability.  This should fix the
+	  reports of typing notifications not working with third-party clients.
 
 	Gadu-Gadu:
 	* Fix some problems with Gadu-Gadu buddy icons (Adam Strzelecki)
